refactor: 명령어 관련 클래스 텍스트 최신 규격으로 수정